Исправление ошибки с \No

--- a/report-template/rep-titlepage.tex
+++ b/report-template/rep-titlepage.tex
@@ -8,15 +8,15 @@
 {<<ÍÀÓ×ÍÎ-ÈÑÑËÅÄÎÂÀÒÅËÜÑÊÈÉ ÈÍÑÒÈÒÓÒ ×ÀĞÎÄÅÉÑÒÂÀ È ÂÎËØÅÁÑÒÂÀ>>}
 \end{center}
 \smallskip
-\hspace{13cm} {\small İêç. $\No$}
+\hspace{13cm} {\small İêç. $\textnumero$}
 \medskip
 
 \begin{tabular*}{17cm}[t]{lr}
 {
 \begin{tabular*}{6.5cm}[t]{l}
 ÓÄÊ  539.172 \\
-\No{} ãîñ.ğåãèñòğàöèè  12345678  \\
-Èíâ. \No{} \\
+\textnumero{} ãîñ.ğåãèñòğàöèè  12345678  \\
+Èíâ. \textnumero{} \\
 \end{tabular*}
 }&{
 \begin{tabular*}{10.5cm}[t]{l}
